--- a/style.css
+++ b/style.css
@@ -3,3 +3,50 @@ body {
   height: 100%;
   margin: 0;
 }
+h1{
+display: flex;
+align-content: center;
+justify-content: center;
+}
+.container{
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+img{
+  display: block;
+  margin: auto;
+  justify-content: center;
+}
+#featured-property{
+  display: block;
+  margin: auto;
+  align-content: center;
+  justify-content: center;
+  text-align: center;
+
+}
+nav{
+  align-content: center;
+  justify-content: center;
+}
+a{
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
+p{
+  width: 800px;
+  display: block;
+  margin: auto;
+  vertical-align: auto
+}
+#details{
+  display: flex;
+  justify-content:space-around;
+  align-content: center;
+  float: left;
+  margin: auto;
+  border: 10px;
+  background-color: red;
+}
